# robotframework-unreal

./: .clang-format  .gitignore  LICENSE  Readme.md  RobotIntegration.uplugin
Content/: ExampleHUD.uasset  ExampleLevel.umap  OtherHUD.uasset  OtherLevel.umap  SimpleCube.uasset
Docs/Diagrams/: Keyword.puml  KeywordExecution.puml  Structure.puml
Python/: .gitignore  pyproject.toml
Python/UnrealLibrary/: __init__.py  keywords.py  library.py  routes.yaml
Python/examples/: Example.robot  README.md
Source/RobotIntegration/: RobotIntegration.Build.cs
Source/RobotIntegration.Automation/: RobotIntegration.Automation.csproj  SampleScript.cs
Source/RobotIntegration/Private/: KeywordManager.cpp  LocatorMarker.cpp  NavigationWithMetadata.cpp  RobotIntegration.cpp  Router.cpp  WidgetUtils.cpp  XmlRpcServer.cpp
Source/RobotIntegration/Public/: KeywordManager.h  LocatorMarker.h  NavigationWithMetadata.h  RobotIntegration.h  Router.h  WidgetUtils.h  XmlRpcServer.h
Source/RobotIntegrationEditorExtension/: Readme.md  RobotIntegrationEditorExtension.Build.cs
Source/RobotIntegrationEditorExtension/Private/: RobotIntegrationEditorExtension.cpp  WidgetDetailCustomization.cpp  WidgetMetadataExtender.cpp
Source/RobotIntegrationEditorExtension/Public/: RobotIntegrationEditorExtension.h  WidgetDetailCustomization.h  WidgetMetadataExtender.h
Source/RobotKeywords/: RobotKeywords.Build.cs
Source/RobotKeywords/Private/: General.cpp  Keyword.cpp  Parse.cpp  RobotKeywords.cpp
Source/RobotKeywords/Public/: Keyword.h  Parse.h  RobotKeywords.h
Source/XmlRpc/: XmlRpc.Build.cs
(+27 files in other folders)
